[gd_scene load_steps=4 format=3 uid="uid://jb4fav4bu744"]

[ext_resource type="Script" uid="uid://vbeqtub1cxud" path="res://src/game_scenes/stats/stats.gd" id="1_habpo"]
[ext_resource type="Texture2D" uid="uid://bixpcax2l3df6" path="res://icon.svg" id="2_6o8qp"]
[ext_resource type="Script" uid="uid://npxvdowu7rtg" path="res://src/game_scenes/stats/organ_display_container.gd" id="2_plk11"]

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_habpo")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14901961, 0.14901961, 0.14901961, 0.5568628)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -175.0
offset_right = 500.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "STATS SCREEN"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label1" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Wave : $wave

Flips : $COINS_TOSSED

Money : $Money
"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "VALUE_ADD : $VALUE_ADD

VALUE_MULT: $VALUE_MULT

Luck: $Luck

"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.12591085, 0.12591085, 0.12591082, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OrgansContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
columns = 7
script = ExtResource("2_plk11")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/MarginContainer/OrgansContainer"]
layout_mode = 2
texture = ExtResource("2_6o8qp")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -128.0
offset_right = -78.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
text = "back"
